fixed publishing publications build_gradle

--- a/app/src/main/res/layout/fragment_camera.xml
+++ b/app/src/main/res/layout/fragment_camera.xml
@@ -10,7 +10,7 @@
         android:id="@+id/take_picture_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Take Picture"
+        android:text="@string/take_picture"
         android:textAllCaps="false"
         android:textSize="21sp"
         android:textStyle="bold"
